commit translated contents

--- a/docs/docs-ref-autogen/office/office.fileproperties.yml
+++ b/docs/docs-ref-autogen/office/office.fileproperties.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 5bb14b89a56f1c30349df5683400e3cd95db4066
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: 00021ecf9c4db2973b03029b0e1164e04ea88872
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26227693"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29982564"
 items:
 - uid: office.Office.FileProperties
   name: Office.FileProperties
@@ -23,7 +23,7 @@ items:
   - typeScript
   type: property
   syntax:
-    content: 'url: string;'
+    content: 'url: string'
     return:
       type:
       - string
