--- a/docs/docs-ref-autogen/excel/excel.interfaces.cellvalueconditionalformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.cellvalueconditionalformatupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 86655f0dcc2b415264f53ef8557d96a7bf5bb916
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: ccb06b80c0ae9af90fb9529efbb48fcd40cd5701
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26221050"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29982501"
 items:
 - uid: excel.Excel.Interfaces.CellValueConditionalFormatUpdateData
-  summary: 更新数据的 CellValueConditionalFormat 对象，在"cellValueConditionalFormat.set （{...}）"中使用的接口。
+  summary: 更新对 CellValueConditionalFormat 对象，用于数据接口"cellValueConditionalFormat.set (<!-- -->{...}<!-- -->)".
   name: Excel.Interfaces.CellValueConditionalFormatUpdateData
   fullName: Excel.Interfaces.CellValueConditionalFormatUpdateData
   langs:
