--- a/docs/docs-ref-autogen/excel/excel.interfaces.charttitleupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.charttitleupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: d889feda2256627a9279f81ce986d5c99a8d9439
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: d438878fa108f320c34a9c6222540bb0b1324869
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26222555"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29982494"
 items:
 - uid: excel.Excel.Interfaces.ChartTitleUpdateData
-  summary: 更新数据的 ChartTitle 对象，在"chartTitle.set （{...}）"中使用的接口。
+  summary: ChartTitle 对象，用于上的数据更新接口"chartTitle.set (<!-- -->{...}<!-- -->)".
   name: Excel.Interfaces.ChartTitleUpdateData
   fullName: Excel.Interfaces.ChartTitleUpdateData
   langs:
@@ -44,7 +44,7 @@ items:
       - excel.Excel.Interfaces.ChartTitleFormatUpdateData
 - uid: excel.Excel.Interfaces.ChartTitleUpdateData.horizontalAlignment
   summary: >-
-    代表图表标题的水平对齐方式。
+    表示图表标题水平对齐。
 
 
     \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -60,7 +60,7 @@ items:
       - Excel.ChartTextHorizontalAlignment | "Center" | "Left" | "Right" | "Justify" | "Distributed"
 - uid: excel.Excel.Interfaces.ChartTitleUpdateData.left
   summary: >-
-    代表中图表区的左边缘到图表标题的左边缘的距离，以磅为单位。 如果图表标题不可见，则为 null。
+    表示图表标题左边缘到图表区域左边缘的距离，以磅为单位。 如果图表标题不可见，则为 null。
 
 
     \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -92,7 +92,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ChartTitleUpdateData.position
   summary: >-
-    代表图表标题的位置。 有关详细信息，请参阅 Excel.ChartTitlePosition。
+    表示图表标题的位置。 有关详细信息，请参阅 Excel.ChartTitlePosition。
 
 
     \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -108,7 +108,7 @@ items:
       - Excel.ChartTitlePosition | "Automatic" | "Top" | "Bottom" | "Left" | "Right"
 - uid: excel.Excel.Interfaces.ChartTitleUpdateData.showShadow
   summary: >-
-    代表一个布尔值，确定图表标题是否具有阴影。
+    表示一个布尔值，用于确定图表标题是否具有阴影。
 
 
     \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -140,7 +140,7 @@ items:
       - string
 - uid: excel.Excel.Interfaces.ChartTitleUpdateData.textOrientation
   summary: >-
-    代表图表标题的文本方向。 值应为整数从-90 至 90 或 180 纵向文本。
+    表示图表标题的文本方向。 此值应是 -90 到 90 或 180（垂直文本）之间的整数。
 
 
     \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -156,7 +156,7 @@ items:
       - number
 - uid: excel.Excel.Interfaces.ChartTitleUpdateData.top
   summary: >-
-    代表中的图表区域顶部的图表标题的上边缘的距离，以磅为单位。 如果图表标题不可见，则为 null。
+    表示图表标题上边缘到图表区域顶部的距离，以磅为单位。 如果图表标题不可见，则为 null。
 
 
     \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -172,7 +172,7 @@ items:
       - number
 - uid: excel.Excel.Interfaces.ChartTitleUpdateData.verticalAlignment
   summary: >-
-    代表图表标题的垂直对齐方式。 有关详细信息，请参阅 Excel.ChartTextVerticalAlignment。
+    表示图表标题垂直对齐。 有关详细信息，请参阅 Excel.ChartTextVerticalAlignment。
 
 
     \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
