--- a/docs/docs-ref-autogen/outlook/office.entities.yml
+++ b/docs/docs-ref-autogen/outlook/office.entities.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 09f14f449379d186aa395078f5ea7d4fccb58175
-ms.sourcegitcommit: 31847d2ea6be78b8f473dfbfb0a575fdecd877be
+ms.openlocfilehash: 7b8ead0a09bb4ccc0b430dcc4a02b0709f8c7209
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/13/2018
-ms.locfileid: "26298055"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29982571"
 items:
 - uid: outlook.Office.Entities
   summary: >-
@@ -34,7 +34,7 @@ items:
     <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>
 
 
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>Read</td></tr></table>
+    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
   name: Office.Entities
   fullName: Office.Entities
   langs:
@@ -61,6 +61,7 @@ items:
     return:
       type:
       - string[]
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```javascript\nvar item = Office.context.mailbox.item;\nvar addresses = item.getEntitiesByType(Office.MailboxEnums.EntityType.Address);\n```"
 - uid: outlook.Office.Entities.contacts
   summary: 获取电子邮件地址或约会中找到的联系人。
   name: contacts
@@ -73,6 +74,7 @@ items:
     return:
       type:
       - Contact[]
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```javascript\nvar item = Office.context.mailbox.item;\nvar contacts = item.getEntitiesByType(Office.MailboxEnums.EntityType.Contact);\n```"
 - uid: outlook.Office.Entities.emailAddresses
   summary: 获取电子邮件或约会中找到的电子邮件地址。
   name: emailAddresses
@@ -85,6 +87,7 @@ items:
     return:
       type:
       - string[]
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```javascript\nvar item = Office.context.mailbox.item;\nvar emailAddresses = item.getEntitiesByType(Office.MailboxEnums.EntityType.EmailAddress);\n```"
 - uid: outlook.Office.Entities.meetingSuggestions
   summary: 获取电子邮件中找到的会议建议。
   name: meetingSuggestions
@@ -97,6 +100,7 @@ items:
     return:
       type:
       - MeetingSuggestion[]
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```javascript\nvar item = Office.context.mailbox.item;\nvar meetingSuggestions = item.getEntitiesByType(Office.MailboxEnums.EntityType.MeetingSuggestion);\n```"
 - uid: outlook.Office.Entities.phoneNumbers
   summary: 获取电子邮件或约会中找到的电话号码。
   name: phoneNumbers
@@ -109,6 +113,7 @@ items:
     return:
       type:
       - PhoneNumber[]
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```javascript\nvar item = Office.context.mailbox.item;\nvar phoneNumbers = item.getEntitiesByType(Office.MailboxEnums.EntityType.PhoneNumber);\n```"
 - uid: outlook.Office.Entities.taskSuggestions
   summary: 获取电子邮件或约会中找到的任务建议。
   name: taskSuggestions
@@ -121,6 +126,7 @@ items:
     return:
       type:
       - string[]
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```javascript\nvar item = Office.context.mailbox.item;\nvar taskSuggestions = item.getEntitiesByType(Office.MailboxEnums.EntityType.TaskSuggestion);\n```"
 - uid: outlook.Office.Entities.urls
   summary: 获取电子邮件或约会中呈现的 Internet URL。
   name: urls
@@ -133,3 +139,4 @@ items:
     return:
       type:
       - string[]
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```javascript\nvar item = Office.context.mailbox.item;\nvar urls = item.getEntitiesByType(Office.MailboxEnums.EntityType.Url);\n```"
