--- a/docs/docs-ref-autogen/outlook_1_2/office.meetingsuggestion.yml
+++ b/docs/docs-ref-autogen/outlook_1_2/office.meetingsuggestion.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: bff92b6bfeb37e32124f03c8b41eaa21c5ff19bf
-ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
+ms.openlocfilehash: b9b9619197d16250caf2620ae3e3a0bf9181020b
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/22/2018
-ms.locfileid: "26647586"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29982487"
 items:
 - uid: Outlook_1_2.Office.MeetingSuggestion
   summary: >-
@@ -23,6 +23,30 @@ items:
 
 
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
+
+    ####示例
+
+
+    ```javascript
+
+    var item = Office.context.mailbox.item;
+
+    // Get an array of strings that represent meeting suggestions in the current item's body.
+
+    var meetingSuggestions = item.getEntitiesByType(Office.MailboxEnums.EntityType.MeetingSuggestion);
+
+    console.log("There are " + meetingSuggestions.length + " meeting suggestions.")
+
+    meetingSuggestions.forEach(function (meetingSuggestion) {
+        console.log("Subject: " + JSON.stringify(meetingSuggestion.subject));
+        console.log("Attendees: " + JSON.stringify(meetingSuggestion.attendees));
+        console.log("Location: " + JSON.stringify(meetingSuggestion.location));
+        console.log("Start: " + JSON.stringify(meetingSuggestion.start));
+        console.log("End: " + JSON.stringify(meetingSuggestion.end));
+        console.log("Meeting: " + JSON.stringify(meetingSuggestion.meetingString));
+    });
+
+    ```
   name: Office.MeetingSuggestion
   fullName: Office.MeetingSuggestion
   langs:
@@ -33,7 +57,7 @@ items:
   - Outlook_1_2.Office.MeetingSuggestion.attendees
   - Outlook_1_2.Office.MeetingSuggestion.end
   - Outlook_1_2.Office.MeetingSuggestion.location
-  - Outlook_1_2.Office.MeetingSuggestion.meetingstring
+  - Outlook_1_2.Office.MeetingSuggestion.meetingString
   - Outlook_1_2.Office.MeetingSuggestion.start
   - Outlook_1_2.Office.MeetingSuggestion.subject
 - uid: Outlook_1_2.Office.MeetingSuggestion.attendees
@@ -72,15 +96,15 @@ items:
     return:
       type:
       - string
-- uid: Outlook_1_2.Office.MeetingSuggestion.meetingstring
+- uid: Outlook_1_2.Office.MeetingSuggestion.meetingString
   summary: 获取标识为会议建议的字符串。
-  name: meetingstring
-  fullName: meetingstring
+  name: meetingString
+  fullName: meetingString
   langs:
   - typeScript
   type: property
   syntax:
-    content: 'meetingstring: string;'
+    content: 'meetingString: string;'
     return:
       type:
       - string
