commit bilingual contents

--- a/docs/docs-ref-autogen/excel/excel.interfaces.charttitleupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.charttitleupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: d889feda2256627a9279f81ce986d5c99a8d9439
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: d438878fa108f320c34a9c6222540bb0b1324869
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26222555"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29982494"
 items:
 - uid: excel.Excel.Interfaces.ChartTitleUpdateData
-  summary: <span data-ttu-id="c917f-101">更新数据的 ChartTitle 对象，在"chartTitle.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="c917f-101">An interface for updating data on the ChartTitle object, for use in "chartTitle.set({ ... })".</span></span>
+  summary: <span data-ttu-id="2bdd7-101">ChartTitle 对象，用于上的数据更新接口"chartTitle.set (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="2bdd7-101">An interface for updating data on the ChartTitle object, for use in "chartTitle.set(<!-- -->{ ... }<!-- -->)".</span></span>
   name: Excel.Interfaces.ChartTitleUpdateData
   fullName: Excel.Interfaces.ChartTitleUpdateData
   langs:
@@ -28,10 +28,10 @@ items:
   - excel.Excel.Interfaces.ChartTitleUpdateData.visible
 - uid: excel.Excel.Interfaces.ChartTitleUpdateData.format
   summary: >-
-    <span data-ttu-id="c917f-102">代表图表标题，其中包括填充和字体格式的格式。</span><span class="sxs-lookup"><span data-stu-id="c917f-102">Represents the formatting of a chart title, which includes fill and font formatting.</span></span>
+    <span data-ttu-id="2bdd7-102">代表图表标题，其中包括填充和字体格式的格式。</span><span class="sxs-lookup"><span data-stu-id="2bdd7-102">Represents the formatting of a chart title, which includes fill and font formatting.</span></span>
 
 
-    <span data-ttu-id="c917f-103">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c917f-103">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="2bdd7-103">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2bdd7-103">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: format
   fullName: format
   langs:
@@ -44,10 +44,10 @@ items:
       - excel.Excel.Interfaces.ChartTitleFormatUpdateData
 - uid: excel.Excel.Interfaces.ChartTitleUpdateData.horizontalAlignment
   summary: >-
-    <span data-ttu-id="c917f-104">代表图表标题的水平对齐方式。</span><span class="sxs-lookup"><span data-stu-id="c917f-104">Represents the horizontal alignment for chart title.</span></span>
+    <span data-ttu-id="2bdd7-104">表示图表标题水平对齐。</span><span class="sxs-lookup"><span data-stu-id="2bdd7-104">Represents the horizontal alignment for chart title.</span></span>
 
 
-    <span data-ttu-id="c917f-105">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c917f-105">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="2bdd7-105">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2bdd7-105">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: horizontalAlignment
   fullName: horizontalAlignment
   langs:
@@ -60,10 +60,10 @@ items:
       - Excel.ChartTextHorizontalAlignment | "Center" | "Left" | "Right" | "Justify" | "Distributed"
 - uid: excel.Excel.Interfaces.ChartTitleUpdateData.left
   summary: >-
-    <span data-ttu-id="c917f-106">代表中图表区的左边缘到图表标题的左边缘的距离，以磅为单位。</span><span class="sxs-lookup"><span data-stu-id="c917f-106">Represents the distance, in points, from the left edge of chart title to the left edge of chart area.</span></span> <span data-ttu-id="c917f-107">如果图表标题不可见，则为 null。</span><span class="sxs-lookup"><span data-stu-id="c917f-107">Null if chart title is not visible.</span></span>
+    <span data-ttu-id="2bdd7-106">表示图表标题左边缘到图表区域左边缘的距离，以磅为单位。</span><span class="sxs-lookup"><span data-stu-id="2bdd7-106">Represents the distance, in points, from the left edge of chart title to the left edge of chart area.</span></span> <span data-ttu-id="2bdd7-107">如果图表标题不可见，则为 null。</span><span class="sxs-lookup"><span data-stu-id="2bdd7-107">Null if chart title is not visible.</span></span>
 
 
-    <span data-ttu-id="c917f-108">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c917f-108">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="2bdd7-108">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2bdd7-108">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: left
   fullName: left
   langs:
@@ -76,10 +76,10 @@ items:
       - number
 - uid: excel.Excel.Interfaces.ChartTitleUpdateData.overlay
   summary: >-
-    <span data-ttu-id="c917f-109">表示图表标题是否将叠加在图表上的布尔值。</span><span class="sxs-lookup"><span data-stu-id="c917f-109">Boolean value representing if the chart title will overlay the chart or not.</span></span>
+    <span data-ttu-id="2bdd7-109">表示图表标题是否将叠加在图表上的布尔值。</span><span class="sxs-lookup"><span data-stu-id="2bdd7-109">Boolean value representing if the chart title will overlay the chart or not.</span></span>
 
 
-    <span data-ttu-id="c917f-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c917f-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="2bdd7-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2bdd7-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: overlay
   fullName: overlay
   langs:
@@ -92,10 +92,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ChartTitleUpdateData.position
   summary: >-
-    <span data-ttu-id="c917f-111">代表图表标题的位置。</span><span class="sxs-lookup"><span data-stu-id="c917f-111">Represents the position of chart title.</span></span> <span data-ttu-id="c917f-112">有关详细信息，请参阅 Excel.ChartTitlePosition。</span><span class="sxs-lookup"><span data-stu-id="c917f-112">See Excel.ChartTitlePosition for details.</span></span>
+    <span data-ttu-id="2bdd7-111">表示图表标题的位置。</span><span class="sxs-lookup"><span data-stu-id="2bdd7-111">Represents the position of chart title.</span></span> <span data-ttu-id="2bdd7-112">有关详细信息，请参阅 Excel.ChartTitlePosition。</span><span class="sxs-lookup"><span data-stu-id="2bdd7-112">See Excel.ChartTitlePosition for details.</span></span>
 
 
-    <span data-ttu-id="c917f-113">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c917f-113">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="2bdd7-113">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2bdd7-113">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: position
   fullName: position
   langs:
@@ -108,10 +108,10 @@ items:
       - Excel.ChartTitlePosition | "Automatic" | "Top" | "Bottom" | "Left" | "Right"
 - uid: excel.Excel.Interfaces.ChartTitleUpdateData.showShadow
   summary: >-
-    <span data-ttu-id="c917f-114">代表一个布尔值，确定图表标题是否具有阴影。</span><span class="sxs-lookup"><span data-stu-id="c917f-114">Represents a boolean value that determines if the chart title has a shadow.</span></span>
+    <span data-ttu-id="2bdd7-114">表示一个布尔值，用于确定图表标题是否具有阴影。</span><span class="sxs-lookup"><span data-stu-id="2bdd7-114">Represents a boolean value that determines if the chart title has a shadow.</span></span>
 
 
-    <span data-ttu-id="c917f-115">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c917f-115">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="2bdd7-115">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2bdd7-115">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: showShadow
   fullName: showShadow
   langs:
@@ -124,10 +124,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ChartTitleUpdateData.text
   summary: >-
-    <span data-ttu-id="c917f-116">表示图表的标题文本。</span><span class="sxs-lookup"><span data-stu-id="c917f-116">Represents the title text of a chart.</span></span>
+    <span data-ttu-id="2bdd7-116">表示图表的标题文本。</span><span class="sxs-lookup"><span data-stu-id="2bdd7-116">Represents the title text of a chart.</span></span>
 
 
-    <span data-ttu-id="c917f-117">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c917f-117">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="2bdd7-117">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2bdd7-117">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: text
   fullName: text
   langs:
@@ -140,10 +140,10 @@ items:
       - string
 - uid: excel.Excel.Interfaces.ChartTitleUpdateData.textOrientation
   summary: >-
-    <span data-ttu-id="c917f-118">代表图表标题的文本方向。</span><span class="sxs-lookup"><span data-stu-id="c917f-118">Represents the text orientation of chart title.</span></span> <span data-ttu-id="c917f-119">值应为整数从-90 至 90 或 180 纵向文本。</span><span class="sxs-lookup"><span data-stu-id="c917f-119">The value should be an integer either from -90 to 90, or 180 for vertically-oriented text.</span></span>
+    <span data-ttu-id="2bdd7-118">表示图表标题的文本方向。</span><span class="sxs-lookup"><span data-stu-id="2bdd7-118">Represents the text orientation of chart title.</span></span> <span data-ttu-id="2bdd7-119">此值应是 -90 到 90 或 180（垂直文本）之间的整数。</span><span class="sxs-lookup"><span data-stu-id="2bdd7-119">The value should be an integer either from -90 to 90, or 180 for vertically-oriented text.</span></span>
 
 
-    <span data-ttu-id="c917f-120">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c917f-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="2bdd7-120">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2bdd7-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: textOrientation
   fullName: textOrientation
   langs:
@@ -156,10 +156,10 @@ items:
       - number
 - uid: excel.Excel.Interfaces.ChartTitleUpdateData.top
   summary: >-
-    <span data-ttu-id="c917f-121">代表中的图表区域顶部的图表标题的上边缘的距离，以磅为单位。</span><span class="sxs-lookup"><span data-stu-id="c917f-121">Represents the distance, in points, from the top edge of chart title to the top of chart area.</span></span> <span data-ttu-id="c917f-122">如果图表标题不可见，则为 null。</span><span class="sxs-lookup"><span data-stu-id="c917f-122">Null if chart title is not visible.</span></span>
+    <span data-ttu-id="2bdd7-121">表示图表标题上边缘到图表区域顶部的距离，以磅为单位。</span><span class="sxs-lookup"><span data-stu-id="2bdd7-121">Represents the distance, in points, from the top edge of chart title to the top of chart area.</span></span> <span data-ttu-id="2bdd7-122">如果图表标题不可见，则为 null。</span><span class="sxs-lookup"><span data-stu-id="2bdd7-122">Null if chart title is not visible.</span></span>
 
 
-    <span data-ttu-id="c917f-123">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c917f-123">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="2bdd7-123">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2bdd7-123">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: top
   fullName: top
   langs:
@@ -172,10 +172,10 @@ items:
       - number
 - uid: excel.Excel.Interfaces.ChartTitleUpdateData.verticalAlignment
   summary: >-
-    <span data-ttu-id="c917f-124">代表图表标题的垂直对齐方式。</span><span class="sxs-lookup"><span data-stu-id="c917f-124">Represents the vertical alignment of chart title.</span></span> <span data-ttu-id="c917f-125">有关详细信息，请参阅 Excel.ChartTextVerticalAlignment。</span><span class="sxs-lookup"><span data-stu-id="c917f-125">See Excel.ChartTextVerticalAlignment for details.</span></span>
+    <span data-ttu-id="2bdd7-124">表示图表标题垂直对齐。</span><span class="sxs-lookup"><span data-stu-id="2bdd7-124">Represents the vertical alignment of chart title.</span></span> <span data-ttu-id="2bdd7-125">有关详细信息，请参阅 Excel.ChartTextVerticalAlignment。</span><span class="sxs-lookup"><span data-stu-id="2bdd7-125">See Excel.ChartTextVerticalAlignment for details.</span></span>
 
 
-    <span data-ttu-id="c917f-126">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c917f-126">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="2bdd7-126">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2bdd7-126">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: verticalAlignment
   fullName: verticalAlignment
   langs:
@@ -188,10 +188,10 @@ items:
       - Excel.ChartTextVerticalAlignment | "Center" | "Bottom" | "Top" | "Justify" | "Distributed"
 - uid: excel.Excel.Interfaces.ChartTitleUpdateData.visible
   summary: >-
-    <span data-ttu-id="c917f-127">表示 chart title 对象的可见性的布尔值。</span><span class="sxs-lookup"><span data-stu-id="c917f-127">A boolean value the represents the visibility of a chart title object.</span></span>
+    <span data-ttu-id="2bdd7-127">表示 chart title 对象的可见性的布尔值。</span><span class="sxs-lookup"><span data-stu-id="2bdd7-127">A boolean value the represents the visibility of a chart title object.</span></span>
 
 
-    <span data-ttu-id="c917f-128">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c917f-128">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="2bdd7-128">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2bdd7-128">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: visible
   fullName: visible
   langs:
