--- a/docs/docs-ref-autogen/excel/excel.chartfill.yml
+++ b/docs/docs-ref-autogen/excel/excel.chartfill.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: c66c0392613066bb5f6142ca734dfca58a98e3a4
-ms.sourcegitcommit: 06eebee5e68d349f78e6bc3bb0ef099fe063cf04
+ms.openlocfilehash: 988122a0fe59cbd87fe14236450e6b3981f10cb8
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 01/17/2019
-ms.locfileid: "28724200"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29982550"
 items:
 - uid: excel.Excel.ChartFill
   summary: >-
-    <span data-ttu-id="1e58e-101">表示图表元素的填充格式。</span><span class="sxs-lookup"><span data-stu-id="1e58e-101">Represents the fill formatting for a chart element.</span></span>
+    <span data-ttu-id="1161c-101">表示图表元素的填充格式。</span><span class="sxs-lookup"><span data-stu-id="1161c-101">Represents the fill formatting for a chart element.</span></span>
 
 
-    <span data-ttu-id="1e58e-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1e58e-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="1161c-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1161c-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: Excel.ChartFill
   fullName: Excel.ChartFill
   langs:
@@ -28,12 +28,12 @@ items:
   - excel.Excel.ChartFill.toJSON
 - uid: excel.Excel.ChartFill.clear
   summary: >-
-    <span data-ttu-id="1e58e-103">清除图表元素的填充颜色。</span><span class="sxs-lookup"><span data-stu-id="1e58e-103">Clear the fill color of a chart element.</span></span>
+    <span data-ttu-id="1161c-103">清除图表元素的填充颜色。</span><span class="sxs-lookup"><span data-stu-id="1161c-103">Clear the fill color of a chart element.</span></span>
 
 
-    <span data-ttu-id="1e58e-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1e58e-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="1161c-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1161c-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: clear()
-  fullName: clear
+  fullName: clear()
   langs:
   - typeScript
   type: method
@@ -42,9 +42,9 @@ items:
     return:
       type:
       - void
-      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"1e58e-105\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"1e58e-105\">Examples</span></span>\n\n```javascript\n// Clear the line format of the major Gridlines on value axis of the Chart named \"Chart1\"\nExcel.run(function (ctx) { \n    var gridlines = ctx.workbook.worksheets.getItem(\"Sheet1\").charts.getItem(\"Chart1\").axes.valueAxis.majorGridlines;\n    gridlines.format.line.clear();\n    return ctx.sync().then(function() {\n            console.log(\"Chart Major Gridlines Format Cleared\");\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"1161c-105\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"1161c-105\">Examples</span></span>\n\n```javascript\n// Clear the line format of the major Gridlines on value axis of the Chart named \"Chart1\"\nExcel.run(function (ctx) { \n    var gridlines = ctx.workbook.worksheets.getItem(\"Sheet1\").charts.getItem(\"Chart1\").axes.valueAxis.majorGridlines;\n    gridlines.format.line.clear();\n    return ctx.sync().then(function() {\n            console.log(\"Chart Major Gridlines Format Cleared\");\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
 - uid: excel.Excel.ChartFill.context
-  summary: <span data-ttu-id="1e58e-106">与对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="1e58e-106">The request context associated with the object.</span></span> <span data-ttu-id="1e58e-107">这将连接到 Office 主机应用程序的过程外接程序的过程。</span><span class="sxs-lookup"><span data-stu-id="1e58e-107">This connects the add-in's process to the Office host application's process.</span></span>
+  summary: <span data-ttu-id="1161c-106">与对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="1161c-106">The request context associated with the object.</span></span> <span data-ttu-id="1161c-107">这将连接到 Office 主机应用程序的过程外接程序的过程。</span><span class="sxs-lookup"><span data-stu-id="1161c-107">This connects the add-in's process to the Office host application's process.</span></span>
   name: context
   fullName: context
   langs:
@@ -56,9 +56,9 @@ items:
       type:
       - RequestContext
 - uid: excel.Excel.ChartFill.load
-  summary: <span data-ttu-id="1e58e-108">队列设置命令加载指定的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="1e58e-108">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="1e58e-109">读取属性之前，必须调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="1e58e-109">You must call "context.sync()" before reading the properties.</span></span>
+  summary: <span data-ttu-id="1161c-108">队列设置命令加载指定的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="1161c-108">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="1161c-109">读取属性之前，必须调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="1161c-109">You must call "context.sync()" before reading the properties.</span></span>
   name: load(option)
-  fullName: load
+  fullName: load(option)
   langs:
   - typeScript
   type: method
@@ -75,12 +75,12 @@ items:
       - string | string[] | OfficeExtension.LoadOption
 - uid: excel.Excel.ChartFill.setSolidColor
   summary: >-
-    <span data-ttu-id="1e58e-110">将图表元素的填充格式设置为统一颜色。</span><span class="sxs-lookup"><span data-stu-id="1e58e-110">Sets the fill formatting of a chart element to a uniform color.</span></span>
+    <span data-ttu-id="1161c-110">将图表元素的填充格式设置为统一颜色。</span><span class="sxs-lookup"><span data-stu-id="1161c-110">Sets the fill formatting of a chart element to a uniform color.</span></span>
 
 
-    <span data-ttu-id="1e58e-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1e58e-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="1161c-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1161c-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: setSolidColor(color)
-  fullName: setSolidColor
+  fullName: setSolidColor(color)
   langs:
   - typeScript
   type: method
@@ -89,21 +89,24 @@ items:
     return:
       type:
       - void
-      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"1e58e-112\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"1e58e-112\">Examples</span></span>\n\n```javascript\nExcel.run(function (ctx) { \n    var chart = ctx.workbook.worksheets.getItem(\"Sheet1\").charts.getItem(\"Chart1\");    \n\n    chart.format.fill.setSolidColor(\"#FF0000\");\n\n    return ctx.sync().then(function() {\n            console.log(\"Chart1 Background Color Changed.\");\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n\n    let pointsCollection = sheet.charts.getItemAt(0).series.getItemAt(0).points;\n    let point = pointsCollection.getItemAt(2);\n\n    // Set color for chart point.\n    point.format.fill.setSolidColor('red');\n\n    await context.sync();        \n});\n```"
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"1161c-112\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"1161c-112\">Examples</span></span>\n\n```javascript\nExcel.run(function (ctx) { \n    var chart = ctx.workbook.worksheets.getItem(\"Sheet1\").charts.getItem(\"Chart1\");    \n\n    chart.format.fill.setSolidColor(\"#FF0000\");\n\n    return ctx.sync().then(function() {\n            console.log(\"Chart1 Background Color Changed.\");\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n\n    let pointsCollection = sheet.charts.getItemAt(0).series.getItemAt(0).points;\n    let point = pointsCollection.getItemAt(2);\n\n    // Set color for chart point.\n    point.format.fill.setSolidColor('red');\n\n    await context.sync();        \n});\n```"
     parameters:
     - id: color
-      description: <span data-ttu-id="1e58e-113">HTML 表示的窗体的背景颜色的颜色代码\#RRGGBB (例如"FFA500") 或为已命名的 HTML 颜色 （例如"橙色"）。</span><span class="sxs-lookup"><span data-stu-id="1e58e-113">HTML color code representing the color of the background, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
+      description: <span data-ttu-id="1161c-113">HTML 表示的窗体的背景颜色的颜色代码\#RRGGBB (例如"FFA500") 或为已命名的 HTML 颜色 （例如"橙色"）。</span><span class="sxs-lookup"><span data-stu-id="1161c-113">HTML color code representing the color of the background, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
       type:
       - string
 - uid: excel.Excel.ChartFill.toJSON
-  summary: <span data-ttu-id="1e58e-114">重写 JavaScript`toJSON()`方法，为了提供更多有用的输出时 API 对象传递给`JSON.stringify()` <!-- -->。</span><span class="sxs-lookup"><span data-stu-id="1e58e-114">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`<!-- -->.</span></span> <span data-ttu-id="1e58e-115">(`JSON.stringify`<!-- -->，反过来，调用`toJSON`对象传递给它的方法。)原始 Excel.ChartFill 对象是 API 对象，而`toJSON`方法返回一个普通的 JavaScript 对象 (类型为`Excel.Interfaces.ChartFillData` <!-- -->)，其中包含原始对象中的任何加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="1e58e-115">(`JSON.stringify`<!-- -->, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.ChartFill object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ChartFillData`<!-- -->) that contains shallow copies of any loaded child properties from the original object.</span></span>
+  summary: <span data-ttu-id="1161c-114">重写 JavaScript`toJSON()`方法，为了提供更多有用的输出时 API 对象传递给`JSON.stringify()` <!-- -->。</span><span class="sxs-lookup"><span data-stu-id="1161c-114">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`<!-- -->.</span></span> <span data-ttu-id="1161c-115">(`JSON.stringify`<!-- -->，反过来，调用`toJSON`对象传递给它的方法。)原始 Excel.ChartFill 对象是 API 对象，而`toJSON`方法返回一个普通的 JavaScript 对象 (类型为`Excel.Interfaces.ChartFillData` <!-- -->)，其中包含原始对象中的任何加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="1161c-115">(`JSON.stringify`<!-- -->, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.ChartFill object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ChartFillData`<!-- -->) that contains shallow copies of any loaded child properties from the original object.</span></span>
   name: toJSON()
-  fullName: toJSON
+  fullName: toJSON()
   langs:
   - typeScript
   type: method
   syntax:
-    content: 'toJSON:'
+    content: >-
+      toJSON(): {
+                  [key: string]: string;
+              };
     return:
       type:
       - >-
