--- a/docs/docs-ref-autogen/excel/excel.interfaces.cellvalueconditionalformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.cellvalueconditionalformatupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 86655f0dcc2b415264f53ef8557d96a7bf5bb916
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: ccb06b80c0ae9af90fb9529efbb48fcd40cd5701
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26221050"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29982501"
 items:
 - uid: excel.Excel.Interfaces.CellValueConditionalFormatUpdateData
-  summary: <span data-ttu-id="11d3d-101">更新数据的 CellValueConditionalFormat 对象，在"cellValueConditionalFormat.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="11d3d-101">An interface for updating data on the CellValueConditionalFormat object, for use in "cellValueConditionalFormat.set({ ... })".</span></span>
+  summary: <span data-ttu-id="53d1e-101">更新对 CellValueConditionalFormat 对象，用于数据接口"cellValueConditionalFormat.set (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="53d1e-101">An interface for updating data on the CellValueConditionalFormat object, for use in "cellValueConditionalFormat.set(<!-- -->{ ... }<!-- -->)".</span></span>
   name: Excel.Interfaces.CellValueConditionalFormatUpdateData
   fullName: Excel.Interfaces.CellValueConditionalFormatUpdateData
   langs:
@@ -19,10 +19,10 @@ items:
   - excel.Excel.Interfaces.CellValueConditionalFormatUpdateData.rule
 - uid: excel.Excel.Interfaces.CellValueConditionalFormatUpdateData.format
   summary: >-
-    <span data-ttu-id="11d3d-102">返回一个格式对象，封装的条件格式字体、 填充、 边框和其他属性。</span><span class="sxs-lookup"><span data-stu-id="11d3d-102">Returns a format object, encapsulating the conditional formats font, fill, borders, and other properties.</span></span>
+    <span data-ttu-id="53d1e-102">返回一个格式对象，封装的条件格式字体、 填充、 边框和其他属性。</span><span class="sxs-lookup"><span data-stu-id="53d1e-102">Returns a format object, encapsulating the conditional formats font, fill, borders, and other properties.</span></span>
 
 
-    <span data-ttu-id="11d3d-103">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="11d3d-103">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="53d1e-103">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="53d1e-103">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: format
   fullName: format
   langs:
@@ -35,10 +35,10 @@ items:
       - excel.Excel.Interfaces.ConditionalRangeFormatUpdateData
 - uid: excel.Excel.Interfaces.CellValueConditionalFormatUpdateData.rule
   summary: >-
-    <span data-ttu-id="11d3d-104">表示此条件格式中的 Rule 对象。</span><span class="sxs-lookup"><span data-stu-id="11d3d-104">Represents the Rule object on this conditional format.</span></span>
+    <span data-ttu-id="53d1e-104">表示此条件格式中的 Rule 对象。</span><span class="sxs-lookup"><span data-stu-id="53d1e-104">Represents the Rule object on this conditional format.</span></span>
 
 
-    <span data-ttu-id="11d3d-105">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="11d3d-105">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="53d1e-105">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="53d1e-105">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: rule
   fullName: rule
   langs:
