--- a/docs/docs-ref-autogen/outlook/office.recurrencetimezone.yml
+++ b/docs/docs-ref-autogen/outlook/office.recurrencetimezone.yml
@@ -1,22 +1,63 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: ab1d05fb69b05906f33c9d72d372e8af192ec2f3
-ms.sourcegitcommit: a68606173477c7fb4069880eea941766c7d8c50d
+ms.openlocfilehash: 66a142ae14b802f81fb8793a6e3012fa517ab786
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/01/2019
-ms.locfileid: "29703475"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29982480"
 items:
 - uid: outlook.Office.RecurrenceTimeZone
   summary: >-
-    <span data-ttu-id="03c30-101">代表重复周期的时区。</span><span class="sxs-lookup"><span data-stu-id="03c30-101">Represents the time zone of the recurrence.</span></span>
+    <span data-ttu-id="af5f1-101">代表重复周期的时区。</span><span class="sxs-lookup"><span data-stu-id="af5f1-101">Represents the time zone of the recurrence.</span></span>
 
 
-    <span data-ttu-id="03c30-102">\[[API 集： 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="03c30-102">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="af5f1-102">\[[API 集： 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="af5f1-102">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="03c30-103">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="03c30-103">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="03c30-104">ReadItem</span><span class="sxs-lookup"><span data-stu-id="03c30-104">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="af5f1-103">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="af5f1-103">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="af5f1-104">ReadItem</span><span class="sxs-lookup"><span data-stu-id="af5f1-104">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="03c30-105">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="03c30-105">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="03c30-106">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="03c30-106">Compose or read</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="af5f1-105">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="af5f1-105">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="af5f1-106">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="af5f1-106">Compose or read</span></span></td></tr></table><span data-ttu-id="af5f1-107">
+
+    ####示例</span><span class="sxs-lookup"><span data-stu-id="af5f1-107">
+
+    #### Examples</span></span>
+
+
+    ```javascript
+
+    // This example gets the Recurrence object of an appointment item.
+
+    Office.context.mailbox.item.recurrence.getAsync(callback);
+
+
+    function callback(asyncResult) {
+        var context = asyncResult.context;
+        var recurrence = asyncResult.value;
+        if (!recurrence) {
+        //if (recurrence == null) {
+            console.log("One-time appointment or meeting");
+        } else {
+            console.log(JSON.stringify(recurrence));
+        }
+    }
+
+
+    // The following example shows the results of the getAsync call that retrieves the recurrence for a series.
+
+    // NOTE: In this example, seriesTimeObject is a placeholder for the JSON representing the
+
+    // recurrence.seriesTime property. You should use the SeriesTime object's methods to get the
+
+    // recurrence date and time properties.
+
+    Recurrence = {
+        "recurrenceType": "weekly",
+        "recurrenceProperties": {"interval": 2, "days": ["mon","thu","fri"], "firstDayOfWeek": "sun"},
+        "seriesTime": {seriesTimeObject},
+        "recurrenceTimeZone": {"name": "Pacific Standard Time", "offset": -480}
+    }
+
+    ```
   name: Office.RecurrenceTimeZone
   fullName: Office.RecurrenceTimeZone
   langs:
@@ -27,7 +68,7 @@ items:
   - outlook.Office.RecurrenceTimeZone.name
   - outlook.Office.RecurrenceTimeZone.offset
 - uid: outlook.Office.RecurrenceTimeZone.name
-  summary: <span data-ttu-id="03c30-107">代表定期所在的时区的名称。</span><span class="sxs-lookup"><span data-stu-id="03c30-107">Represents the name of the recurrence time zone.</span></span>
+  summary: <span data-ttu-id="af5f1-108">代表定期所在的时区的名称。</span><span class="sxs-lookup"><span data-stu-id="af5f1-108">Represents the name of the recurrence time zone.</span></span>
   name: name
   fullName: name
   langs:
@@ -39,7 +80,7 @@ items:
       type:
       - MailboxEnums.RecurrenceTimeZone
 - uid: outlook.Office.RecurrenceTimeZone.offset
-  summary: <span data-ttu-id="03c30-108">在会议序列开始的日期表示以分钟为单位的本地时区和 UTC 之间的差异的整数值。</span><span class="sxs-lookup"><span data-stu-id="03c30-108">Integer value representing the difference in minutes between the local time zone and UTC at the date that the meeting series began.</span></span>
+  summary: <span data-ttu-id="af5f1-109">在会议序列开始的日期表示以分钟为单位的本地时区和 UTC 之间的差异的整数值。</span><span class="sxs-lookup"><span data-stu-id="af5f1-109">Integer value representing the difference in minutes between the local time zone and UTC at the date that the meeting series began.</span></span>
   name: offset
   fullName: offset
   langs:
